--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,11 @@
+body{
+font-family: 'Karla', sans-serif;	
+}
 input:checked ~ .dot {
   transform: translateX(100%);
   background-color: #48bb78;
+}
+input:checked ~ .radio {
+  color:white;
+  background-color: green;
 }
